# sandstorm-test-app

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs
.sandstorm/: build.sh  environment  global-setup.sh  sandstorm-files.list  sandstorm-pkgdef.capnp  setup.sh
.sandstorm/downloads/: capnproto-c++-0.9.0.tar.gz.sha256  rustup-init-1.24.3-x86_64-unknown-linux-gnu.sha256
src/: main.rs
